# pc-wspolne-okienko

./: .env.example  README.md  docker-compose.yml
.github/workflows/: build.yml
wo-api/: .env.example  Cargo.toml  Dockerfile  Taskfile.yml  package-lock.json  package.json  tsconfig.json
wo-api-ts/: package-lock.json  package.json
wo-api-ts/src/handlers/: getCalendar.ts
wo-api/src/: app_config.rs  logger.ts  main.rs  main.ts  validate.rs  validated.rs
wo-api/src/api/handlers/: create_lobby.rs  fallback.rs  get_calendar.rs  get_lobby_users.rs  health.rs  join_lobby.rs  mod.rs
wo-api/src/calendar/: mod.rs
wo-api/src/db/: mod.rs
wo-api/src/lib/: types.ts
wo-api/src/lib/calendar/: calendarParser.ts  componentAccessWrapper.ts
wo-api/src/lobby/: mod.rs
wo-db/: .env.example  README.md  docker-compose.yml
wo-db/init/: 001_init.sql
wo-frontend/: Dockerfile  Taskfile.yml  index.html  package-lock.json  package.json
wo-frontend/src/: App.tsx  index.css
wo-frontend/src/components/: UsersList.tsx  WeeklyCalendar.tsx
wo-frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
wo-frontend/src/lib/: api.ts  colors.ts  mockData.ts
wo-frontend/src/pages/: JoinLobbyPage.tsx  LobbyCreatePage.tsx  LobbyDetailsPage.tsx  LobbySchedulePage.tsx
