[package]
name = "wo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
ical = { version = "0.11.0", features = ["ical"] }
reqwest = "0.13.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
